source/webapp/sites/all/themes/checkbook3/css/global.css
/* ... */
table.expense td.mwbe .expense-container > a {
    background: url("../images/icon_mwbe.png") no-repeat center 5px;
}
table.expense td.mwbe.active .expense-container > a {
    background: url("../images/icon_mwbe_a.png") no-repeat center 5px;
}
table.expense td.subvendors .expense-container > a {
    background: url("../images/icon_subvendor.png") no-repeat center 5px;
}
table.expense td.subvendors.active .expense-container > a {
    background: url("../images/icon_subvendor_a.png") no-repeat center 5px;
}
table.expense td.mwbe .expense-container{
    position: relative;
}
table.expense td.mwbe .expense-container > a .drop-down-menu-triangle{
    background: transparent url("../images/arrow-gray_nofill.png") no-repeat;
    width: 23px;
    height: 20px;
    position: absolute;
    top:63px;
    right:5px;
}
table.expense td.mwbe .expense-container > a .top-navigation-amount{
    width: 50px;
    margin: 0 auto;
    white-space: nowrap;
}
table.expense td.mwbe.subvendors .expense-container > a .top-navigation-amount{
    width:75px;
}
table.expense td.mwbe .expense-container > a:hover .drop-down-menu-triangle{
    background: url("../images/arrow-gray.png") no-repeat;
}


table.expense td.mwbe.active .expense-container > a > div,
table.expense td.subvendors.active .expense-container > a > div{
    background: url("../images/arrow-white_nofill.png") no-repeat 100px 23px;
}
table.expense td.mwbe.active .expense-container > a:hover > div,
table.expense td.subvendors.active .expense-container > a:hover > div{
    background: url("../images/arrow-white.png") no-repeat 100px 23px;
} 

td.active div.indicator {
    background: url("../images/carrot.png") no-repeat scroll center 0 transparent;
    height: 17px;
    margin-bottom: -17px;
    position: relative;
    top: 1px;
    z-index: 10;
}

/********************
*** CHART STYLING ***
********************/
#region-content{margin:0px;}
#zone-content-wrapper{
    padding:0px 10px;
    margin:0px;
}

/* grid link */
a.chart-grid-view {
    background: url("../images/grid-icon.png") no-repeat scroll 0 0 transparent;
    height: 19px;
    padding: 3px 0px 2px 25px;
    position: absolute;
    top: 0;
    right: 70px;
    z-index: 10;
}
h3.grid_chart_title{text-transform: none;}
h3.grid_year_title{text-transform: none;}

/* chart */
.highcharts-container{
    margin:4px auto 0px auto;
}
.chart-left{
    float:left;
    width:50%;
}
.chart-right{
    position:relative;
    float:left;
    width:50%;
}
.chart-left .highcharts-container{
    float:left;
}

.chart-right{
    height:319px;
    background: url("../images/visualization_divide.png") no-repeat left center;
}
.chart-right .wrap{
    border: 1px solid #82b6df;
    background-color: #f0f0f0;
    color: #3e5d7e;
    position: absolute;
    top: 93px;
    left: 54px;
    text-align: center;
    padding:20px 20px 15px 20px;
}

.chart-right .wrap .number{font-size: 65px;}
.chart-right .wrap .text{font-size: 18px;}
.top-chart {
    margin-bottom: 31px;
}
.bottomContainer .top-chart{
    margin-bottom:0px;
}

/* chart pagination */
.slider-pager {
    bottom: 5px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    text-align: center;
    width: 240px;
    z-index: 25;
    padding-left:75px;
}
.slider-pager a {
    background: url("../images/pager_off.png") repeat scroll 0 0 transparent;
    display: block;
    float:left;
    height: 22px;
    margin-left: 10px;
    text-indent: -9999px !important;
    text-transform: capitalize;
    width: 22px;
}
.slider-pager a.activeSlide {
    background: url("../images/pager_on.png") no-repeat scroll 0 0 transparent;
    color: #FFFFFF;
}

/* no data case */
#no-records {
    color: #3C5E7C;
    font-size: 20px;
    font-weight: bold;
    height: 110px;
    padding-top: 65px;
    display:block;
    width:100%;
    float:left;
    clear:both;
    text-align: center;
}
.no-transactions {
    background: url("../images/notrans.png") no-repeat scroll 0 0 transparent;
    display: block;
    float:left;
    margin-left:250px;
    margin-right: 20px;
    height: 62px;
    width: 62px;
}
#no-records span {
    float:left;
    clear:both;
    width:100%;
    text-align:center;
    margin-top:20px;
}

/****************************
***   GRID VIEW STYLING   ***
****************************/
.page-gridview #section-header{
    margin-bottom:0px;
}
h3.grid_title, h3.grid_chart_title {
    font-size: 18px;
    margin-bottom: 0;
    color: #2d4c68;
    line-height:27px;
}
h3.grid_title{
    width:80%;
}
.print-content h3.grid_title{
    width:auto;
}
h3.grid_year_title {
    color: #353535;
    font-size: 13px;
    margin-bottom: 25px;
    line-height:20px;
}
.print_html {
    margin: 0;
    position: absolute;
    right: 10px;
    top: 50px;
}
.page-gridview-popup .print_html{top:5px;}
.print_html a {
    background: url("../images/printer-friendly.png") no-repeat scroll right top transparent;
    cursor: pointer !important;
    display: block;
    height: 17px;
    padding:3px 24px 0px 0px;
    position: relative;
    z-index: 5000;
}
span.grid_export, span.exportSmartSearch {
    background: url("../images/export.png") no-repeat scroll right 0 transparent;
    color: #209AD6;
    cursor: pointer;
    font-weight: bold;
    position: absolute;
    right: 0;
    text-transform: uppercase;
    top: 55px;
    width: 70px;
    z-index: 10;
    line-height:17px;
}

#block-print-print-links .content{
    position: relative;
}

/********************************************
***   CONTRACT TOTALS MENU TABLE STYLING  ***
********************************************/

.contracts-oge-spending-bottom td div >  .float-clear + .float-clear{
	margin-top: 20px;
}

.panel-panel.grid-12 .bottom-nav-container.panel-pane.pane-node,
.panel-panel.grid-12 .bottom-nav-container.panel-pane.pane-custom,
.pane-contracts-cta-history,
.float-clear{
    float:left;
    clear:both;
    width:100%;
}
/* ... */

